--- a/style.css
+++ b/style.css
@@ -1,15 +1,45 @@
 body{
 	background: black;
 	color: white;
+	text-align: center;
 }
 
 h1 {
-	font-size: 70px;
+	font-size: 80px;
 	font-family: 'Allerta Stencil', sans-serif;
+	margin: -80px;
+	padding: 0 10px, 20px,0;
+}
+
+img {
+	height: 253px;
+	border-radius: 126px;
 }
 h2 {
-	font-size: 35px;
+	font-size: 45px;
+	font-family: 'Allerta Stencil', sans-serif;
+
+}
+article {
+	max-width: 500px;
+	margin: 0 auto;
+	padding: 100px 10px 50px 0;
+
 }
 p {
 	font-size: 17px;
+	padding: -10px;
+	max-width: 300px;
+	text-align: center;
+	display: block;
 }
+.beach {
+	margin: 90px;
+	float: right;
+}
+
+
+
+
+
+
