--- a/style.css
+++ b/style.css
@@ -18,24 +18,26 @@ img {
 h2 {
 	font-size: 45px;
 	font-family: 'Allerta Stencil', sans-serif;
+	text-align: center;
+	margin-bottom: -10px;
+	margin-top: 100px;
 
 }
 article {
-	max-width: 500px;
-	margin: 0 auto;
-	padding: 100px 10px 50px 0;
-
-}
+	margin: -25px;
+	}
 p {
-	font-size: 17px;
-	padding: -10px;
-	max-width: 300px;
 	text-align: center;
+	margin-bottom: -60px;
+	position: relative;
 	display: block;
 }
 .beach {
 	margin: 90px;
 	float: right;
+}
+footer {
+	position: absolute;
 }
 
 
