more attempts at simplifying

--- a/style.css
+++ b/style.css
@@ -1,23 +1,52 @@
 body {
 	background: black;
 	color: white;
+	max-width: 800px;
+	margin: 0 auto;
 }
-h1{
+header {
+	text-align: center;
+}
+a {
+	font-size: 20px;
+	font-weight: bold;
+	margin-right: 60px;
+}
 
+h1{
+	font-size: 75px;
+	text-align: center;
+	padding: 50px;
+	font-family: 'Allerta Stencil', sans-serif;
 }
 h2 {
-
+	font-size: 50px;
+	text-align: center;
+	font-family: 'Allerta Stencil', sans-serif;
 
 }
-img {
+ul {
+	background: white;
+}
+li {
+	display: inline;
+	padding: 0 15px 0 15px;
+}
 
+img {
+	height: 254px;
+	float: right;
+	padding: 20px;
+	border-radius: 360px;
 }
 p {
-
+	font-size: 30px;
+	text-align: center;
 }
-footer {
 
-}
+
+
+
 
 
 
